tests/neg/semantic_inline_asm_constraint_unsupported.baa
// RUN: expect-fail
// EXPECT: قيد خرج غير مدعوم في 'مجمع'

صحيح الرئيسية() {
    صحيح س = ٠.
    مجمع {
        "nop"
        : "=b"(س)
    }
    إرجع ٠.
}
